--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="профиль.jpg">
     <title>Найсик студио</title>
 </head>
 <body>
@@ -53,5 +54,10 @@
    </center></h2>
    <a href="https://www.youtube.com/c/НайсикСтудио/featured"><p><center>Канал</center></p></a>
    <a href="https://www.youtube.com/channel/UC7wJqDUKsDq4Ic6PrfMxlWg"><p><center>Менеджер Ярослав</center></p></a>
+   <ul>
+       <li><h2>10000 подписчиков - летсплеи</h2></li>
+       <li><h2>100000 подписчиков - песня</h2></li>
+       <li><h2>1000000 своя студия + песня</h2></li>
+   </ul>
 </body>
 </html>
